--- a/src/App.scss
+++ b/src/App.scss
@@ -11,11 +11,20 @@ ul.nav-bar {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   li {
     list-style: none;
-    button {
+    height: 3rem;
+    width: 6rem;
+    display: flex;
+    button, a {
       background-color: transparent;
+      text-decoration: none;
+      color: black;
       border: none;
       cursor: pointer;
-      padding: 5vw 10vw;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       transition: all 0.3s;
       &.active {
         background-image: linear-gradient(0deg, #80BD45, transparent);
